--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,13 +4,23 @@
   переключая тему
 */
 
-:root.theme-dark {
+.page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-}
-
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+  --accent-color: #ff0070;
+  --title-color: #db00ff;
+  --title-shadow-color: #ff0070;
+  --subtitle-color: #000028;
+  --section-title-color: #ff0070;
+  --menu-text-color: #ff0070;
+  --text-color: #f1b2ce;
+  --main-background-color: #000028;
+  --main-font: 'IBM Plex mono';
+  --text-size: 18px;
+  --text-normal: normal;
+  --text-bold: bold;
+  --bg-image: url(../images/cover-image-dark.png) center center/cover no-repeat;
+  --header-decor-display: flex;
 }
