--- a/styles/light.css
+++ b/styles/light.css
@@ -4,13 +4,43 @@
   переключая тему
 */
 
-:root.theme-light {
+.page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #ff8dcb;
+  --title-color: #ffc2e6;
+  --title-shadow-color: #ff0070;
+  --subtitle-color: #353430;
+  --section-title-color: #353430;
+  --menu-list-color: #353430;
+  --text-color: #353430;
+  --main-background-color: #fff1f7;
+  --main-font: 'IBM Plex mono';
+  --text-size: 18px;
+  --text-normal: normal;
+  --text-bold: bold;
+  --bg-image: url(../images/cover-image-light.png) center center/cover no-repeat;
+  --header-decor-display: none;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+@media (prefers-color-scheme: light) {
+  :root {
+    /* Дублируем переменные светлой темы */   
+    --accent-color: #ff8dcb;
+    --title-color: #ffc2e6;
+    --title-shadow-color: #ff0070;
+    --subtitle-color: #353430;
+    --section-title-color: #353430;
+    --menu-text-color: #353430;
+    --text-color: #353430;
+    --main-background-color: #fff1f7;
+    --main-font: 'IBM Plex mono';
+    --text-size: 18px;
+    --text-normal: normal;
+    --text-bold: bold;
+    --bg-image: url(../images/cover-image-light.png) center center/cover no-repeat; 
+    --header-decor-display: none;
+  }
 }
