--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,353 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  max-inline-size: 768px;
+  background: var(--bg-image);
+  background-attachment: fixed;
+  background-color: var(--main-background-color);
+  font-family: var(--main-font, sans-serif);
+  font-size: var(--text-size);
+  color: var(--text-color);
+  letter-spacing: normal;
 }
+
+.header {
+  position: relative;
+}
+
+.header__decor {
+  position: absolute;
+  display: var(--header-decor-display);
+  align-items: center;
+  top: 10px;
+  right: 14px;
+  color: var(--accent-color);
+  line-height: 1.39;
+}
+
+.header__decor::after {
+  content: '';
+  margin-inline: 10px 5px;
+  block-size: 9px;
+  inline-size: 9px;
+  box-shadow: 0 0 4px 2px #ff0070;
+  background-color: #ff0070;
+  border-radius: 50%;
+}
+
+.decorated-zone {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  block-size: min(100vh, 668px);
+}
+
+.decorated-zone::before {
+  content: '';
+  inline-size: 25px;
+  block-size: 25px;
+  justify-self: start;
+  align-self: end;
+  border-block-start: solid 1px var(--accent-color);
+  border-inline-end: solid 1px var(--accent-color);
+}
+
+.decorated-zone::after {
+  content: '';
+  inline-size: 25px;
+  block-size: 25px;
+  border-inline-start: solid 1px var(--accent-color);
+  border-block-end: solid 1px var(--accent-color);
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 10px;
+  margin-block-start: 38px;
+}
+
+.header__theme-menu-button {
+  min-inline-size: 70px;
+  min-block-size: 26px;
+  padding: 0 13px;
+  background-color: transparent;
+  border: none;
+  font-family: inherit;
+  text-transform: lowercase;
+  color: var(--menu-text-color);
+  font-family: inherit;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: solid 1px currentColor;
+}
+.header__theme-menu-button:hover, .header__theme-menu-button_active {
+  color: var(--menu-text-color);
+  outline: solid 1px currentColor;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+}
+
+.main-title {
+  text-shadow: 4px 4px 0 var(--accent-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem); 
+  font-weight: var(--text-bold);
+  line-height: 0.83;
+  color: var(--title-color);
+}
+
+.header__title {
+  margin-block-start: 67px;
+}
+
+.title-decor {
+  font-size: var(--text-size);
+  font-weight: var(--text-bold);
+  line-height: 1.3;
+  letter-spacing: normal;
+  color: var(--subtitle-color);
+  background-color: var(--accent-color);
+  margin-block-start: 20px;
+}
+
+.title-decor-normal {
+  font-weight: var(--text-normal);
+}
+
+.header__descr {
+  margin-block: 55px 31px;
+}
+
+.header__descr-hyphenation {
+  display: block;
+}
+
+.section {
+  display: grid;
+  padding-block-start: 50px;
+  padding-inline: 10px;
+  background-color: var(--main-background-color);
+}
+
+.reasons {
+  padding-block-start: 40px;
+}
+
+.section-title {
+  color: var(--section-title-color);
+  font-size: var(--text-size);
+  line-height: 1.3;
+}
+
+.block-descr {
+  margin-block-start: 10px;
+  line-height: 1.3;
+  letter-spacing: normal;
+}
+
+.descr-link { 
+  text-shadow: 1px 1px 0 var(--accent-color);
+  text-decoration: none;
+}
+
+.descr-link:focus {
+  outline: none;
+}
+
+.descr-link:focus-visible {
+  outline: solid 1px currentColor;
+}
+
+.descr-link:hover { 
+  text-decoration: underline;
+}
+
+.galery {
+  gap: 10px;
+  padding-block: 30px 40px;
+}
+
+.galery__wrapper {
+  display: grid;
+  gap: 10px;
+}
+
+.galery__img {
+  inline-size: 100%;
+}
+
+.footer {
+  justify-content: space-between;
+  background-color: var(--main-background-color);
+}
+
+.footer__title {
+  place-self: center;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+
+@media (width >= 768px) {
+  .page {
+    max-inline-size: 1024px;
+  }
+
+  .decorated-zone {
+    justify-content: space-between;
+    block-size: min(100vh, 1024px);
+    padding: 20px;
+}
+
+  .header__decor {
+    top: 20px;
+    right: 24px;
+  }
+
+  .main-title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__title {
+    margin-inline-start: -20px;
+  }
+
+  .header__descr {
+    max-inline-size: 364px;
+    align-self: end;
+  }
+
+  .section {
+    padding-block-start: 80px;
+    padding-inline: 20px;
+    grid-template-columns: max-content 1fr;
+    gap: 20px;
+  }
+
+  .section-title {
+    max-inline-size: 236px;
+  }
+
+  .reasons   {
+    padding-block-start: 60px;
+  }
+
+  .reasons__block_subtitle, .adviсe__subtitle, .galery__subtitle {
+    margin-block-start: 0;
+  }
+
+  .reasons__block, .adviсe__block {
+    grid-column: 2;
+  }
+
+  .title-decor-normal:first-child {
+    margin-block-start: 0;
+  }
+
+  .concentration {
+    grid-template-columns: none;
+    gap: 0;
+  }
+
+  .galery {
+    grid-template-columns: none;
+    padding-block-end: 60px;
+  }
+
+  .galery__wrapper {
+    gap: 20px;
+  }
+
+  .galery__subtitle {
+    inline-size: 100%;
+    grid-row: 1;
+  }
+  
+  .sunset { 
+    grid-area: sunset; 
+  }
+  .ice-cream { 
+    grid-area: ice-cream; 
+  }
+  .street { 
+    grid-area: street; 
+  }
+  .type { 
+    grid-area: type; 
+  }
+  .books { 
+    grid-area: books; 
+  }
+
+  .galery__wrapper {
+      display: grid;
+      gap: 20px; 
+      grid-template-areas: 
+        "sunset sunset ice-cream"
+        "type books ice-cream"
+        "type street street"; 
+  }
+
+  .galery__img {
+    inline-size: 100%;
+    block-size: 100%;
+    object-fit: cover;
+  }
+
+}
+
+@media (width >= 1024px) {
+  .page {
+    max-inline-size: 1440px;
+  }
+
+  /* Уважаемый ревьюер, в десктопной версии у меня возникли сложности с адаптацией. Укажите мне, пожалуйста, на ошибку. Здесь мне приходится прибегать к жестким отступам, в том числе и отрицательным, но кажется мне, что есть более красивый вариант.*/
+
+  .decorated-zone {
+    block-size: min(100vh, 768px);
+    justify-content: initial;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    justify-content: center;
+    margin-block-start: -28px;
+  }
+
+  .header__title {
+    margin-block-start: 273px;
+  }
+
+  .header__descr {
+    margin-block: 114px 90px;
+    max-inline-size: max(50%, 491px);
+  }
+
+  .section-title {
+    max-inline-size: 315px;
+  }
+
+  .concentration {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px;
+  }
+
+  .concentration__block {
+    grid-row: 2;
+  }
+
+  .footer {
+    justify-content: space-between;
+  }
+
+}
+
