--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,7 +4,7 @@
   переключая тему
 */
 
-.page.theme_dark {
+:root.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
@@ -23,4 +23,5 @@
   --text-bold: bold;
   --bg-image: url(../images/cover-image-dark.png) center center/cover no-repeat;
   --header-decor-display: flex;
+  --decorate-color: #ff0070;
 }
