--- a/styles/light.css
+++ b/styles/light.css
@@ -4,7 +4,7 @@
   переключая тему
 */
 
-.page.theme_light {
+:root.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
@@ -23,11 +23,10 @@
   --text-bold: bold;
   --bg-image: url(../images/cover-image-light.png) center center/cover no-repeat;
   --header-decor-display: none;
+  --decorate-color: #353430;
 }
 
 @media (prefers-color-scheme: light) {
-
-
   :root {
     /* Дублируем переменные светлой темы */   
     --accent-color: #ff8dcb;
@@ -45,6 +44,6 @@
     --bg-image: url(../images/cover-image-light.png) 
     center center/cover no-repeat; 
     --header-decor-display: none;
+    --decorate-color: #353430;
   }
-  
 }
