--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,12 @@
 
 .header {
   position: relative;
+  height: 100vh;
+  min-height: 668px;
+  padding: 10px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
 }
 
 .header__decor {
@@ -26,6 +32,10 @@
   line-height: 1.39;
 }
 
+.header__decor::before {
+  content: 'REC';
+}
+
 .header__decor::after {
   content: '';
   margin-inline: 10px 5px;
@@ -36,29 +46,28 @@
   border-radius: 50%;
 }
 
-.decorated-zone {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  block-size: min(100vh, 668px);
-}
-
 .decorated-zone::before {
   content: '';
+  position: absolute;
   inline-size: 25px;
   block-size: 25px;
-  justify-self: start;
-  align-self: end;
-  border-block-start: solid 1px var(--accent-color);
-  border-inline-end: solid 1px var(--accent-color);
+  justify-self: end;
+  align-self: start;
+  border-block-start: solid 1px var(--decorate-color);
+  border-inline-end: solid 1px var(--decorate-color);
+  inset-block-start: 10px;
+  inset-inline-end: 10px;
 }
 
 .decorated-zone::after {
   content: '';
+  position: absolute;
   inline-size: 25px;
   block-size: 25px;
-  border-inline-start: solid 1px var(--accent-color);
-  border-block-end: solid 1px var(--accent-color);
+  border-inline-start: solid 1px var(--decorate-color);
+  border-block-end: solid 1px var(--decorate-color);
+  inset-inline-start: 10px;
+  inset-block-end: 10px;
 }
 
 .header__theme-menu-list {
@@ -66,7 +75,6 @@
   flex-direction: column;
   align-items: end;
   gap: 10px;
-  margin-block-start: 38px;
 }
 
 .header__theme-menu-button {
@@ -88,9 +96,12 @@
 .header__theme-menu-button:focus-visible {
   border-block-end: solid 1px currentColor;
 }
-.header__theme-menu-button:hover, .header__theme-menu-button_active {
-  color: var(--menu-text-color);
-  outline: solid 1px currentColor;
+.header__theme-menu-button:hover {
+  outline: var(--button-hover-color);
+}
+
+.header__theme-menu-button_active {
+  outline: var(--button-active-color);
 }
 
 .header__theme-menu-button_active {
@@ -103,10 +114,6 @@
   font-weight: var(--text-bold);
   line-height: 0.83;
   color: var(--title-color);
-}
-
-.header__title {
-  margin-block-start: 67px;
 }
 
 .title-decor {
@@ -124,7 +131,7 @@
 }
 
 .header__descr {
-  margin-block: 55px 31px;
+  margin-block: 0;
 }
 
 .header__descr-hyphenation {
@@ -135,10 +142,9 @@
   display: grid;
   padding-block-start: 50px;
   padding-inline: 10px;
-  background-color: var(--main-background-color);
 }
 
-.reasons {
+.section:first-child {
   padding-block-start: 40px;
 }
 
@@ -155,7 +161,7 @@
 }
 
 .descr-link { 
-  text-shadow: 1px 1px 0 var(--accent-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
   text-decoration: none;
 }
 
@@ -164,7 +170,7 @@
 }
 
 .descr-link:focus-visible {
-  outline: solid 1px currentColor;
+  border-block-end: solid 1px currentColor;
 }
 
 .descr-link:hover { 
@@ -186,15 +192,18 @@
 }
 
 .footer {
-  justify-content: space-between;
-  background-color: var(--main-background-color);
+  position: relative;
+  display: flex;
+  place-content: center;
+  place-items: center;
+  height: 100vh;
+  min-height: 668px;
+  padding: 10px;
 }
 
 .footer__title {
-  place-self: center;
   text-shadow: 2px 2px 0 var(--accent-color);
 }
-
 
 @media (width >= 768px) {
 
@@ -202,11 +211,21 @@
     max-inline-size: 1024px;
   }
 
-  .decorated-zone {
-    justify-content: space-between;
-    block-size: min(100vh, 1024px);
+  .header {
+    height: 100vh;
+    min-height: 1024px;
     padding: 20px;
-}
+  }
+
+  .decorated-zone::before {
+    inset-block-start: 20px;
+    inset-inline-end: 20px;
+  }
+
+  .decorated-zone::after {
+    inset-inline-start: 20px;
+    inset-block-end: 20px;
+  }
 
   .header__decor {
     top: 20px;
@@ -223,7 +242,11 @@
 
   .header__descr {
     max-inline-size: 364px;
-    align-self: end;
+    justify-self: end;
+  }
+
+  .title-decor-no-margin {
+    margin-block-start: 0;
   }
 
   .section {
@@ -233,27 +256,15 @@
     gap: 20px;
   }
 
+  .section:first-child {
+    padding-block-start: 60px;
+  }
+
   .section-title {
     max-inline-size: 236px;
   }
 
-  .reasons   {
-    padding-block-start: 60px;
-  }
-
-  .reasons__block_subtitle, .adviсe__subtitle, .galery__subtitle {
-    margin-block-start: 0;
-  }
-
-  .reasons__block, .adviсe__block {
-    grid-column: 2;
-  }
-
-  .title-decor-normal:first-child {
-    margin-block-start: 0;
-  }
-
-  .concentration {
+  .section_column {
     grid-template-columns: none;
     gap: 0;
   }
@@ -303,6 +314,10 @@
     object-fit: cover;
   }
 
+  .footer {    
+    height: 100vh;
+    min-height: 1024px;
+  }
 }
 
 @media (width >= 1024px) {
@@ -311,25 +326,21 @@
     max-inline-size: 1440px;
   }
 
-  /* Уважаемый ревьюер, в десктопной версии у меня возникли сложности с адаптацией. Укажите мне, пожалуйста, на ошибку. Здесь мне приходится прибегать к жестким отступам, в том числе и отрицательным, но кажется мне, что есть более красивый вариант.*/
+  .header {
+    height: 100vh;
+    min-height: 768px;
+  }
 
-  .decorated-zone {
-    block-size: min(100vh, 768px);
-    justify-content: initial;
+  .header__theme-menu {
+    align-self: flex-start;
   }
 
   .header__theme-menu-list {
     flex-direction: row;
     justify-content: center;
-    margin-block-start: -28px;
-  }
-
-  .header__title {
-    margin-block-start: 273px;
   }
 
   .header__descr {
-    margin-block: 114px 90px;
     max-inline-size: max(50%, 491px);
   }
 
@@ -337,18 +348,17 @@
     max-inline-size: 315px;
   }
 
-  .concentration {
-    grid-template-columns: repeat(3, 1fr);
+  .section__wrapper:has(.column) {
+    display: grid;
     column-gap: 20px;
+    grid-template-columns: repeat(3, minmax(315px, max-content));
   }
 
-  .concentration__block {
-    grid-row: 2;
-  }
-
-  .footer {
-    justify-content: space-between;
+  .footer {    
+    height: 100vh;
+    min-height: 768px;
   }
 
 }
+
 
