--- a/styles/variables.css
+++ b/styles/variables.css
@@ -18,4 +18,7 @@
   --text-bold: bold;
   --bg-image: url(../images/cover-image-dark.png) center center/cover no-repeat;
   --header-decor-display: flex;
+  --decorate-color: #ff0070;
+  --button-hover-color: solid 1px rgba(255, 0, 112, 0.4);
+  --button-active-color: solid 1px #ff0070;
 }
