--- a/styles/light.css
+++ b/styles/light.css
@@ -4,7 +4,7 @@
   переключая тему
 */
 
-:root.theme_light {
+.page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
@@ -24,6 +24,8 @@
   --bg-image: url(../images/cover-image-light.png) center center/cover no-repeat;
   --header-decor-display: none;
   --decorate-color: #353430;
+  --button-hover-color: solid 1px rgba(50, 49, 45, 0.4);
+  --button-active-color: solid 1px #353430;
 }
 
 @media (prefers-color-scheme: light) {
@@ -45,5 +47,7 @@
     center center/cover no-repeat; 
     --header-decor-display: none;
     --decorate-color: #353430;
+    --button-hover-color: solid 1px rgba(50, 49, 45, 0.4);
+    --button-active-color: solid 1px #353430;
   }
 }
