--- a/styles/style.css
+++ b/styles/style.css
@@ -123,11 +123,14 @@
   letter-spacing: normal;
   color: var(--subtitle-color);
   background-color: var(--accent-color);
-  margin-block-start: 20px;
 }
 
 .title-decor-normal {
   font-weight: var(--text-normal);
+}
+
+.title-decor-normal:first-child {
+  margin-block-start: 20px;
 }
 
 .header__descr {
@@ -140,7 +143,7 @@
 
 .section {
   display: grid;
-  padding-block-start: 50px;
+  padding-block-start: 30px;
   padding-inline: 10px;
 }
 
@@ -152,13 +155,18 @@
   color: var(--section-title-color);
   font-size: var(--text-size);
   line-height: 1.3;
+  margin-block-end: 20px;
 }
 
 .block-descr {
-  margin-block-start: 10px;
+  margin-block: 10px 20px;
   line-height: 1.3;
   letter-spacing: normal;
 }
+/* 
+.block-descr:not(:first-child) {
+  margin-block-start: 0;
+} */
 
 .descr-link { 
   text-shadow: 2px 2px 0 var(--accent-color);
@@ -170,11 +178,11 @@
 }
 
 .descr-link:focus-visible {
-  border-block-end: solid 1px currentColor;
+  outline: solid 1px currentColor;
 }
 
 .descr-link:hover { 
-  text-decoration: underline;
+  border-block-end: solid 1px currentColor;
 }
 
 .galery {
@@ -212,7 +220,6 @@
   }
 
   .header {
-    height: 100vh;
     min-height: 1024px;
     padding: 20px;
   }
@@ -245,12 +252,8 @@
     justify-self: end;
   }
 
-  .title-decor-no-margin {
-    margin-block-start: 0;
-  }
-
   .section {
-    padding-block-start: 80px;
+    padding-block-start: 60px;
     padding-inline: 20px;
     grid-template-columns: max-content 1fr;
     gap: 20px;
@@ -315,7 +318,6 @@
   }
 
   .footer {    
-    height: 100vh;
     min-height: 1024px;
   }
 }
@@ -327,7 +329,6 @@
   }
 
   .header {
-    height: 100vh;
     min-height: 768px;
   }
 
@@ -355,7 +356,6 @@
   }
 
   .footer {    
-    height: 100vh;
     min-height: 768px;
   }
 
