--- a/styles/light.css
+++ b/styles/light.css
@@ -14,6 +14,7 @@
   --title-shadow-color: #ff0070;
   --subtitle-color: #353430;
   --section-title-color: #353430;
+  --menu-text-color: #353430;
   --menu-list-color: #353430;
   --text-color: #353430;
   --main-background-color: #fff1f7;
